<resources>
    <string name="app_name">GPMDP Controller</string>
    <string name="controller_ip_edittext_hint">Enter your Google Play Music Desktop Player host IP here</string>
    <string name="controller_connect_button_text">Connect</string>
    <string name="controller_connect_help_textview">
        If connecting fails:\n
        \u2022 make sure GPMDP is running\n
        \u2022 make sure "Enable Playback API" is checked in the GPMDP Desktop Settings\n
        \u2022 make sure your host firewall has an exception for the GPMDP PlaybackAPI\n
        \u2022 make sure your device Wi-Fi is turned\n
        \u2022 make sure you are connected to the same network as GPMDP\n
        \u2022 make sure you have the correct IP address for your host machine\n
    </string>
    <string name="controller_pin_textview_text">Enter the PIN from the GPMDP now</string>
    <string name="controller_pin_textview_error">Pairing failed, did you enter the right PIN?</string>
    <string name="controller_pair_button_text">Pair</string>

    <string name="no_intent_handler">There are no applications available to handle this action.</string>

    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>

    <string name="play_menu_action_queue">Queue</string>
    <string name="controller_queue_name">Queue</string>

    <string name="playbackstate_customaction_refresh">Refresh</string>
    <string name="playbackstate_customaction_repeat">Toggle Repeat</string>
    <string name="playbackstate_customaction_shuffle">Toggle Shuffle</string>
</resources>
